# elevator_simulation_rust

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
src/: cabin.rs  controller.rs  gui.rs  lib.rs  logger.rs  main.rs  passenger.rs
tests/: integration.rs
