[package]
name = "elevator" # the name of the package
version = "0.1.0"    # the current version, obeying semver
edition = "2021"
# authors = ["Alice <a@example.com>", "Bob <b@example.com>"]
[dependencies]
rand = "0.9.0-beta.3"
log = "0.4"
env_logger = "0.9"
ratatui = "0.20"
crossterm = "0.26"
crossbeam-channel = "0.5.8"

[lib]
name = "elevator"
path = "src/lib.rs"